--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react-router-dom": "^7.8.0",
