--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "firebase": "^12.1.0",
+    "openai": "^5.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
